--- a/pviewer5/MainWindow.xaml
+++ b/pviewer5/MainWindow.xaml
@@ -302,12 +302,13 @@
  
         <WrapPanel Name="filebar"
                    Grid.Column="0"
+                   Grid.ColumnSpan="2"
                    Grid.Row="0"
                    Margin="5,5,5,5">
             <Button Content="Choose File"
                     Click="ChooseFile"/>
             <Label Content="Current File= "/>
-            <Label Name="filename"
+            <Label Content="{Binding Path=PacketFileName}"
                    MinWidth="100"/>
 
         </WrapPanel>
@@ -315,16 +316,16 @@
                    Grid.Column="1"
                    Grid.Row="0"
                    Margin="5,5,5,5">
-            <Button Content="MAC Aliases"
-                    Click="mnmbutton"/>
-            <Button Content="IP4 Aliases"
-                    Click="inmbutton"/>
-       </WrapPanel>
+        </WrapPanel>
         <WrapPanel Name="viewsettings"
                    Grid.Column="0"
                    Grid.ColumnSpan="2"
                    Grid.Row="1"
                    Margin="5,5,5,5">
+           <Button Content="MAC Aliases"
+                    Click="mnmbutton"/>
+            <Button Content="IP4 Aliases"
+                    Click="inmbutton"/>
             <CheckBox Name="displayaliascheckbox"
                       Content="Display Aliases"
                       IsChecked="{Binding Source={StaticResource GUIUtilKey}, Path=Instance.UseAliases, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -361,10 +362,12 @@
                 <WrapPanel Orientation="Horizontal">
                     <Button
                         Content="Apply to View"
+                        Click="ApplyFilterToView"
                         IsEnabled="{Binding Path=filters.ChangedSinceApplied}"/>
                     <Button
                         Content="Reload PCAP File"
-                        IsEnabled="False"/>
+                        Click="ReloadFile"
+                        IsEnabled="{Binding Path=FileLoaded}"/>
                     <Button Content="Load Filter Set" 
                             Click="filterset_load"/>
                     <Button
