--- a/pviewer5/MainWindow.xaml
+++ b/pviewer5/MainWindow.xaml
@@ -89,6 +89,7 @@
         </HierarchicalDataTemplate>
         <HierarchicalDataTemplate DataType="{x:Type local:G}"
                                   ItemsSource="{Binding Path=L}">
+            
             <TextBlock>
                 <TextBlock.Text>
                     <MultiBinding Converter="{StaticResource displayinfomvc}">
@@ -341,12 +342,18 @@
                   Grid.ColumnSpan="2"
                   Grid.Row="2"
                   Margin="5,5,5,5">
-                 <TreeView Name="grouptree"
+            <TreeView Name="grouptree"
                         VirtualizingPanel.IsVirtualizing="True"
                         VirtualizingPanel.VirtualizationMode="Recycling"
                       ItemsSource="{Binding Path=grouplistlist}"
                       SelectedItemChanged="grouptree_SelectedItemChanged">
-                  </TreeView>          
+                <TreeView.ItemContainerStyle>
+                    <Style TargetType="TreeViewItem">
+                        <Setter Property="IsExpanded" Value="{Binding isexpanded, Mode=TwoWay}" />
+                    </Style>
+                </TreeView.ItemContainerStyle>
+
+            </TreeView>          
  
         </GroupBox>
 
